[Balooctl] remove directory parent check

Summary:
`balooctl add includeFolders/excludeFolders` was checking for parent directories before allowing the user to add a subdirectory. This is unnecessary since Baloo itself supports the logic of (for example) excluding `~/foo` but including `~/foo/bar`. Removing the check solves the problem and fixes 396535.

BUG: 396535
FIXED-IN: 5.51

Test Plan:
```
mkdir ~/test1 ~/test2 ~/test1-test ~/test1-test/foo
balooctl config add excludeFolders ~/test1
balooctl config add excludeFolders ~/test2
balooctl config add excludeFolders ~/test1-test
balooctl config add includeFolders ~/test1-test/foo
```

If it worked, you don't get any errors.

Reviewers: #baloo, #dolphin, bruns, #frameworks, cfeck

Reviewed By: #baloo, bruns

Subscribers: smithjd, anthonyfieroni, kde-frameworks-devel

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D15583